<resources>
    <string name="app_name">RAid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="user_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password_again">Confirm Password</string>
    <string name="web_client_id">794018183453-32hfh733r434cnfburbm5pda0haeqi50.apps.googleusercontent.com</string>
    <string name="add_account">Add Account</string>
    <string name="view_accounts">View Accounts</string>
    <string name="sign_out">Sign Out</string>
    <string name="unidentified_user">Unidentified User</string>
    <string name="unidentified_email">Unidentified Email</string>
    <string name="title_activity_add_story">AddStory</string>
    <string name="category">Category</string>
    <string name="error_unidentified_user">It seems you have not been identified…</string>

    <string-array name="categories">
        <item>Story</item>
        <item>Poem</item>
    </string-array>

    <string-array name="subscriptions">
        <item>One</item>
        <item>Three</item>
        <item>Five</item>
        <item>Ten</item>
    </string-array>

    <string name="title_activity_subscriptions">Subscriptions</string>
    <string name="stories_are_unique_and_worth_a_million_pounds">A unique story is worth a million pounds…</string>
    <string name="but_we_re_nice_at_raid_and_will_only_charge_you_a_few_bucks">…but we\'re nice at RAid and will only charge you a few bucks…</string>
    <string name="get">Get</string>
    <string name="base_price">150 Naira</string>
    <string name="subscribe">Subscribe</string>
    <string name="price_of_one">500 Naira</string>
    <string name="price_of_three">1200 Naira</string>
    <string name="price_of_five">2000 Naira</string>
    <string name="price_of_ten">4000 Naira</string>
    <string name="view_stories">View Stories</string>
    <string name="view_poems">View Poems</string>
    <string name="flutterwave_instructor">Are you a Flutterwave Heroes Instructor and want to test this awesome app with just 150 Naira? Click below (You get One story…)</string>
    <string name="story_for">story for</string>
    <string name="instructor_test">Instructor Test</string>
    <string name="topic_optional">Topic (Optional)</string>
    <string name="a_catchy_title">a catchy title</string>
    <string name="my_stories">My Stories</string>
    <string name="add_bank">Add Bank</string>
    <string name="my_poems">My Poems</string>
</resources>
