<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/add_account" />
        <item
            android:id="@+id/view_accounts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/view_accounts" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/sign_out"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
